--- a/2022W01/(1) Homework  DDL-20221017-2359.md
+++ b/2022W01/(1) Homework  DDL-20221017-2359.md
@@ -10,6 +10,6 @@
 **作业：** 
 1. 完成 Github 配置，创建 C2022FALL 仓库并邀请助教（njnucsta2022）为 collaborator（R）
 2. 完成算法竞赛域中[2022秋 C语言程序设计 作业01](https://vijos.org/d/nnu_contest/contest/63460f85f413620c3fac4c7d)，本次作业为ACM赛制（R）
-3. 有兴趣的同学可自行了解算法方面的[相关知识](https://oi-wiki.org//)，可自行阅读[Resource]()中的相关资料，也可访问相关的算法网站，如[ACWing](https://www.acwing.com/), [Luogu](https://www.luogu.com.cn/), [Nowcoder](https://ac.nowcoder.com/acm/home), [Codeforces](https://codeforces.com/)等，这对之后C语言的学习会有一定帮助
+3. 有兴趣的同学可自行了解算法方面的[相关知识](https://oi-wiki.org//)，可自行阅读[Resource](https://github.com/njnucsta2022/C2022FALL/tree/main/Resource)中的相关资料，也可访问相关的算法网站，如[ACWing](https://www.acwing.com/), [Luogu](https://www.luogu.com.cn/), [Nowcoder](https://ac.nowcoder.com/acm/home), [Codeforces](https://codeforces.com/)等，这对之后C语言的学习会有一定帮助
 
 答疑邮箱：gu@njnu.edu.cn , title: 【19200100 王海康】关于“xxx 的问题”。
