--- a/2022W02/(2) Homework  DDL-20221024-2359.md
+++ b/2022W02/(2) Homework  DDL-20221024-2359.md
@@ -85,9 +85,11 @@ int main() {
 
 17. 完成ACWing平台中的[724](https://www.acwing.com/problem/content/726/)一题，将你的程序在线提交，直到正确为止。
 
+---
+注：题 9-17 请在递交的程序中附上代码在线分享链接，如下面这段程序，
+具体操作过程请详见[演示视频](https://www.jianguoyun.com/p/DZmOQVwQjJqGCxjXzd4EIAA)。
 ```cpp
-注：题 9-17 请在递交的程序中附上，如：
-
+//https://www.acwing.com/blog/content/26407/
 #include<bits/stdc++.h>
 using namespace std;
 
@@ -110,7 +112,6 @@ int main()
     return 0;
 }
 ```
-
 
 18. 理解前置自增/自减操作符与后置自增/自减操作符的异同（R）
 
