--- a/2022W02/(2) Homework  DDL-20221024-2359.md
+++ b/2022W02/(2) Homework  DDL-20221024-2359.md
@@ -5,7 +5,7 @@
 3. 所有的作业（标注（R）的为阅读作业无需递交，其余无标记的代码作业需递交）
 
 	① 【截止时间】请于：2022 年 10 月 24 日 23：59（GMT+8）  
-	② 递交方式】通过git上传至GitHub仓库，并将作业放置/2022W01/路径下。保证每次作业路径命名方式统一。**注意：递交路径不正确的作业将不被接受；**  
+	② 【递交方式】通过git上传至GitHub仓库，并将作业放置/2022W02/路径下。保证每次作业路径命名方式统一。**注意：递交路径不正确的作业将不被接受；**  
 	③ 【递交要求】作业提交到自己仓库的 C2022FALL/2022W02 目录下。每个程序文件以**第几次作业-作业号**格式命名（如2-1.c、2-2.c）。**注意：作业 title 不正确的作业不被接受**；  
 	④ 【附件要求】作业格式为：**.c** 文件，其余格式作业将不被接受
 
