--- a/2022W02/(2) Homework  DDL-20221024-2359.md
+++ b/2022W02/(2) Homework  DDL-20221024-2359.md
@@ -1,7 +1,7 @@
 # 【2022W02】C语言程序设计课后练习 
 **要求：** 
 1. 本次作业为程序作业与阅读作业； 
-2. 代码类作业使用 commit 到 GitHub 的方式； 
+2. 代码类作业使用 commit 到 GitHub 的方式，具体请参考[作业递交指南](https://github.com/njnucsta2022/DB2022FALL/blob/main/Homework_Submission_Guidelines.pdf)； 
 3. 所有的作业（标注（R）的为阅读作业无需递交，其余无标记的代码作业需递交）
 
 	① 【截止时间】请于：2022 年 10 月 24 日 23：59（GMT+8）  
