--- a/2022W02/(2) Homework  DDL-20221024-2359.md
+++ b/2022W02/(2) Homework  DDL-20221024-2359.md
@@ -11,7 +11,7 @@
 
 **作业：** 
 1. 扩展教材P17例子2.1，定义表2.1（见P12）中所描述的所有类型的变量，并观察其所占内存空间的字节数。（R）
-2. 完成教材P31习题2中的一、3和一、4，并将其编译运行，以测试你所写的结果是否正确。
+2. 完成教材P31习题2中的一、3和一、4，并将其编译运行，以测试你所写的结果是否正确。（注：程序命名为2-2-1.c、2-2-2.c）
 3. 完成教材P31习题2中的二、4（注：请写出完整的可编译运行的程序，并多次修改变量x、a、b、c的值，以测试你所写出的表达式是否正确）。
 4. 在如下程序中，去掉注释，在TODO的位置写一个表达式，这个表达式的作用是判断一个整数的奇偶性。使得当n为奇数时，flag为1；当n为偶数时，flag为0。编译运行，并多次修改n的值，以测试你所写的表达式是否正确（提示：使用三目运算符或位运算）。
 ```c
