--- a/2022W03/(3) Homework  DDL-20221031-2359.md
+++ b/2022W03/(3) Homework  DDL-20221031-2359.md
@@ -22,7 +22,7 @@
 
 6. 使用欧几里得辗转相除法求两个正整数最大公约数，请用递归实现。函数声明如下：```int GCD_recursive(int m, int n);```在主函数中分别使用这个函数，并进行多组测试，以验证你的函数。
 
-7.  使用欧几里得辗转相除法求两个正整数最大公约数，请用循环（迭代）实现。函数声明如下：```int GCD_iterative(int m, int n);``在主函数中分别使用这两个函数，并进行多组测试，以验证你的函数。
+7.  使用欧几里得辗转相除法求两个正整数最大公约数，请用循环（迭代）实现。函数声明如下：```int GCD_iterative(int m, int n);```在主函数中分别使用这两个函数，并进行多组测试，以验证你的函数。
 
 8. 写一个函数，函数声明如下：```void reverse(char* str);```该函数接受一个字符串， 将此串反转（如："Homework"的反转为"krowemoH"）在主函数中调用该函数，并进行多组测试，以验证你的函数。
 
