--- a/2022W04/(4) Homework  DDL-20221107-2359.md
+++ b/2022W04/(4) Homework  DDL-20221107-2359.md
@@ -41,6 +41,9 @@
 14. 完成ACWing平台中的[3451](https://www.acwing.com/problem/content/3454/)一题，将你的程序在线提交，直到正确为止。
 
 15. 完成ACWing平台中的[3454](https://www.acwing.com/problem/content/description/3457/)一题，将你的程序在线提交，直到正确为止。
+
+16. 完成ACWing平台中的[764](https://www.acwing.com/problem/content/766/)一题，将你的程序在线提交，直到正确为止。
+
 ---
 注：请在递交的程序中附上代码在线分享链接，如下面这段程序，
 具体操作过程请详见[演示视频](https://www.jianguoyun.com/p/DZmOQVwQjJqGCxjXzd4EIAA)，或[第二次作业范例](https://github.com/njnucsta2022/C2022FALL/blob/main/2022W02/(2)%20Homework%20%20DDL-20221024-2359.md)。
@@ -67,6 +70,20 @@ int main()
     
     return 0;
 }
+```
+
+```markdown
+答疑前请务必先自行尝试探索
+如实在解决不了再联系老师或助教进行求助
+但需附上已经尝试过的方法和对这个问题的思考（截图+文字）
+否则将不予置理
+自行探索的方式有：
+1. 百度，CSDN，Stackoverflow...
+2. QQ群互相讨论
+3. Github中创建Issue讨论
+尽早地有意识地培养自学能力，这对今后的学习有很大的帮助
+趁年轻还有时间，请耐心去探索，去试错！
+Take it easy~ Keep calm & carry on
 ```
 
 答疑邮箱：gu@njnu.edu.cn , title: 【19200100 王海康】关于“xxx 的问题”。
