--- a/2022W04/(4) Homework  DDL-20221107-2359.md
+++ b/2022W04/(4) Homework  DDL-20221107-2359.md
@@ -75,10 +75,10 @@ int main()
 ```markdown
 答疑前请务必先自行尝试探索
 如实在解决不了再联系老师或助教进行求助
-但需附上已经尝试过的方法和对这个问题的思考（截图+文字）
-否则将不予置理
+但需附上已经尝试过的方法和对这个问题的思考（截图+文字），以pdf附件形式发送
+注意格式与命名，否则将不予置理
 自行探索的方式有：
-1. 百度，CSDN，Stackoverflow...
+1. Bing，CSDN，Stackoverflow...
 2. QQ群互相讨论
 3. Github中创建Issue讨论
 尽早地有意识地培养自学能力，这对今后的学习有很大的帮助
