--- a/2022W05/(5) Homework  DDL-202211014-2359.md
+++ b/2022W05/(5) Homework  DDL-202211014-2359.md
@@ -131,9 +131,7 @@ Joe Math990112
 
 14. 完成ACWing平台中的[113](https://www.acwing.com/problem/content/115/)一题，将你的程序在线提交，直到正确为止。
 
-15. 完成ACWing平台中的[785](https://www.acwing.com/problem/content/787/)一题，将你的程序在线提交，直到正确为止。
-
-16. 完成ACWing平台中的[787](https://www.acwing.com/problem/content/789/)一题，将你的程序在线提交，直到正确为止。
+15. 完成Luogu平台中的[P1177](https://www.luogu.com.cn/problem/P1177)一题，将你的程序在线提交，直到正确为止。
 
 ```markdown
 答疑前请务必先自行尝试探索
