--- a/2022W05/(5) Homework  DDL-202211014-2359.md
+++ b/2022W05/(5) Homework  DDL-202211014-2359.md
@@ -133,6 +133,8 @@ Joe Math990112
 
 15. 完成Luogu平台中的[P1177](https://www.luogu.com.cn/problem/P1177)一题，将你的程序在线提交，直到正确为止。
 
+16. 完成ACWing平台中的[1921](https://www.acwing.com/problem/content/1923/)一题，将你的程序在线提交，直到正确为止。
+
 ```markdown
 答疑前请务必先自行尝试探索
 如实在解决不了再联系老师或助教进行求助
