--- a/2022W06/(6) Homework  DDL-20221219-2359.md
+++ b/2022W06/(6) Homework  DDL-20221219-2359.md
@@ -14,7 +14,7 @@
 
 **作业：** 
 1. 奇约数问题。
-**题目描述**：定义函数f(x)为x最大的奇数约数，其中，x为正整数。例如：f(44)=11。现给出整数N，请求出f(1)+f(2)+⋯+f(N)。例如，若N为7，则f(1)+f(2)+f(3)+f(4)+f(5)+f(6)+f(7)=1+1+3+1+5+3+7=21。
+	**题目描述**：定义函数f(x)为x最大的奇数约数，其中，x为正整数。例如：f(44)=11。现给出整数N，请求出f(1)+f(2)+⋯+f(N)。例如，若N为7，则f(1)+f(2)+f(3)+f(4)+f(5)+f(6)+f(7)=1+1+3+1+5+3+7=21。
 	```
 	输入：输入一个正整数N(1≤N≤1000000000)。
 	输出：输出一个整数，即f(1)+f(2)+⋯+f(N)。
@@ -129,18 +129,24 @@
 
 19. 求数组的逆序对的个数。
 	题目描述：对于给定的数组arr，若有arr[i] > arr[j]，其中i < j，则arr[i]与arr[j]为数组arr的一个逆序对。现给定数组arr，求arr的逆序对的个数。
-		```
-		输入：第一行，正整数n，表示数组的大小，n≤40000。第二行，数组的n个数。
-		输出：输出数组的逆序对的个数。
-		```
-		```
-		样例输入：
-		6
-		5 4 2 6 3 1
-		样例输出：
-		11
-		```
+	```
+	输入：第一行，正整数n，表示数组的大小，n≤40000。第二行，数组的n个数。
+	输出：输出数组的逆序对的个数。
+	```
+	```
+	样例输入：
+	6
+	5 4 2 6 3 1
+	样例输出：
+	11
+	```
 	（提示：在归并排序的基础上进行思考）
+20. 如果说，学习C语言是大多数计算机专业学生的语言起点。那么gyh老师的C语言课程，便是大学四年除了C语言以外的大多数专业课的起点。因此，当你结束这门课的学习时，你不知不觉间，已经做到了在上人工智能之前，知道了准确率和召回率；在上操作系统课之前，知道了时间片调度算法；在第一次吃食堂快餐之前，知道了什么东西是手再抖的食堂阿姨也抖不掉的；也知道了面对生活中突如其来的大多数事件，可以从容地对自己说出的那句话。"enjoy yourself"。因此，请设计一个程序，输出"enjoy yourself"（含引号）
+	```
+	输入样例：无输入样例
+	输出样例："enjoy yourself"
+	```
+
 ***
 
 做了这么多紧张刺激的编程题，你可能已经感到烦躁了。让我们来几道轻松舒坦的语法练习题换个口味。
@@ -350,25 +356,25 @@
 
 	D. 内存泄漏
 ***
-1. 完成ACWing平台中的[1995](https://www.acwing.com/problem/content/1997/)一题，将你的程序在线提交，直到正确为止。
+21. 完成ACWing平台中的[1995](https://www.acwing.com/problem/content/1997/)一题，将你的程序在线提交，直到正确为止。
 
-2. 完成ACWing平台中的[2003](https://www.acwing.com/problem/content/2005/)一题，将你的程序在线提交，直到正确为止。
+22. 完成ACWing平台中的[2003](https://www.acwing.com/problem/content/2005/)一题，将你的程序在线提交，直到正确为止。
 
-3. 完成ACWing平台中的[1929](https://www.acwing.com/problem/content/1931/)一题，将你的程序在线提交，直到正确为止。
+23. 完成ACWing平台中的[1929](https://www.acwing.com/problem/content/1931/)一题，将你的程序在线提交，直到正确为止。
 
-4. 完成ACWing平台中的[1922](https://www.acwing.com/problem/content/1924/)一题，将你的程序在线提交，直到正确为止。
+24. 完成ACWing平台中的[1922](https://www.acwing.com/problem/content/1924/)一题，将你的程序在线提交，直到正确为止。
 
-5. 完成ACWing平台中的[1874](https://www.acwing.com/problem/content/1876/)一题，将你的程序在线提交，直到正确为止。
+25. 完成ACWing平台中的[1874](https://www.acwing.com/problem/content/1876/)一题，将你的程序在线提交，直到正确为止。
 
-6. 完成ACWing平台中的[1912](https://www.acwing.com/problem/content/1914/)一题，将你的程序在线提交，直到正确为止。
+26. 完成ACWing平台中的[1912](https://www.acwing.com/problem/content/1914/)一题，将你的程序在线提交，直到正确为止。
 
-7. 完成ACWing平台中的[1854](https://www.acwing.com/problem/content/1856/)一题，将你的程序在线提交，直到正确为止。
+27. 完成ACWing平台中的[1854](https://www.acwing.com/problem/content/1856/)一题，将你的程序在线提交，直到正确为止。
 
-8. 完成ACWing平台中的[1714](https://www.acwing.com/problem/content/1716/)一题，将你的程序在线提交，直到正确为止。
+28. 完成ACWing平台中的[1714](https://www.acwing.com/problem/content/1716/)一题，将你的程序在线提交，直到正确为止。
 
-9. 完成ACWing平台中的[1671](https://www.acwing.com/problem/content/1673/)一题，将你的程序在线提交，直到正确为止。
+29. 完成ACWing平台中的[1671](https://www.acwing.com/problem/content/1673/)一题，将你的程序在线提交，直到正确为止。
 
-10. 完成ACWing平台中的[1902](https://www.acwing.com/problem/content/1904/)一题，将你的程序在线提交，直到正确为止。
+30. 完成ACWing平台中的[1902](https://www.acwing.com/problem/content/1904/)一题，将你的程序在线提交，直到正确为止。
 
 ```markdown
 答疑前请务必先自行尝试探索
